[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/PlayerList.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/UIController.gd" type="Script" id=2]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="Root" type="Node"]

[node name="World" type="Spatial" parent="."]
transform = Transform( 1, 0.000183384, -0.000161596, -0.000183358, 1, 9.38124e-05, 0.000161626, -9.37609e-05, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="World"]
transform = Transform( 1, 0, 0, 0, 0.893927, 0.448212, 0, -0.448212, 0.893927, 0, 4.98398, 6.42674 )

[node name="Ground" type="MeshInstance" parent="World"]
transform = Transform( 100, 0, 0, 0, -1.62921e-05, 1, 0, -100, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 0.684537, 0.33578, -0.64704, -0.244022, 0.94194, 0.230655, 0.686923, 0, 0.726731, -5.7181, 4.71297, 0 )

[node name="Players" type="Node" parent="World"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.4551e-12, 0, 5.36282e-12, 1, -1.45519e-11, -2.91038e-11, 1.45519e-11, 1, 3.9652, 0.00113081, -4.30391 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.45333e-12, 0, 5.36637e-12, 1, -2.91038e-11, -5.82077e-11, 2.91038e-11, 1, 4.93971, 0.000634783, 2.88824 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.44977e-12, 0, 5.36815e-12, 1, -4.36557e-11, -8.73115e-11, 4.36557e-11, 1, -5.89632, -0.000535942, -5.81154 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.448e-12, 0, 5.3717e-12, 1, -5.82077e-11, -1.16415e-10, 5.82077e-11, 1, -5.20969, 0.00063548, -16.9564 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.44622e-12, 0, 5.37348e-12, 1, -7.27596e-11, -1.45519e-10, 7.27596e-11, 1, 4.56529, -0.579302, -19.7742 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance6" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.44267e-12, 0, 5.37703e-12, 1, -8.73115e-11, -1.74623e-10, 8.73115e-11, 1, -1.58024, -0.579868, -25.7461 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance7" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.44089e-12, 0, 5.37881e-12, 1, -1.01863e-10, -2.03727e-10, 1.01863e-10, 1, 8.75665, -0.57905, -14.2673 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance8" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.43912e-12, 0, 5.38236e-12, 1, -1.16415e-10, -2.32831e-10, 1.16415e-10, 1, -10.6833, -0.582499, -15.5027 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance9" type="MeshInstance" parent="World"]
transform = Transform( 1, -4.43379e-12, 0, 5.38769e-12, 1, -1.45519e-10, -2.91038e-10, 1.45519e-10, 1, -8.2273, -0.593535, -0.145116 )
mesh = SubResource( 2 )
material/0 = null

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.28143
margin_right = -1.28143
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Server" type="Button" parent="UI"]
margin_left = 25.0
margin_top = 24.4363
margin_right = 140.0
margin_bottom = 44.4363
text = "Start Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect_To_Server" type="Button" parent="UI"]
margin_left = 25.0
margin_top = 53.0
margin_right = 140.0
margin_bottom = 73.0
text = "Connect to Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -174.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = 128.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client_Server_Label" type="Label" parent="UI/ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = -0.982277
text = "No Started"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client_Server_Info" type="Label" parent="UI/ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.982277
text = "No Started"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
